--- a/_css/style.css
+++ b/_css/style.css
@@ -1,132 +1,174 @@
-    /*Inicio da formatação de reset da página
-    Aqui inicialmente foi zerada as propriedades de margem interna e externa do documento, e dito que o conteúdo não ultrapassasra as "bordas da tela"*/
-    *,*::after,*::before {margin: 0;padding: 0;font-size: 100%;font-weight: 300;border: none;outline: none;-webkit-box-sizing:border-box;-mox-box-sizing:border-box;box-sizing: border-box;}
-    ul{list-style: none;}a{text-decoration: none;cursor: pointer;}
-    /*Fim da formatação de reset da página*/
-
-    div.row {margin-left: -5px;margin-right: -5px;}div.row::before, .row::after{content: "";display: table;}div.row::after{clear: both;}
-    
-    /* 1.3 Edição das colunas que vão dentro das linhas que vão dentro do conteiner do site*/
-        div.col {display: inline-block;vertical-align: top;min-height: 1px;padding-left: 5px;padding-right: 5px;width: 100%;margin-right: -4px;*zoom: 1;*display: inline;}
-        /* duas colonas */
-            @media (min-width: 480px) {
-                .col-2 {
-                    width: 50%;
-                }
-            }
-                /* tres colunas */
-                @media (min-width: 728px) {
-                    .col-3 {
-                        width: 33.3333%;
-                    }
-                }
-                    /* sidebar */
-                    @media (min-width: 992px) {
-                        .col-content {
-                            width: 60%;
-                        }
-
-                        .col-sidebar {
-                        width: 40%;
-                        }
-                    }
-    /*Fim da edição das colunas que vão dentro das linhas que vão dentro do conteiner do site*/
-    /*Fim da edição do conteiner*/
-
-/*Reset da página*/
-*,*::before,*::after{margin:0; padding: 0; box-sizing: border-box;-moz-box-sizing: border-box;-webkit-box-sizing: border-box;font-size: 100%;text-decoration: none;list-style: none;background-size: cover;}
-/*Fim do Reset da página*/
-
-/*===================================*/
-/*Edição do wrapper que é o container alinhador da página da página*/
+@import url('https://fonts.googleapis.com/css?family=Poppins|Roboto&display=swap');
+/*Geral*/
 .wrapper{
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    margin: 100vh auto;
-    width: 80%;
+  margin: 0 auto;
+  width: 80%;
+  height: 100%;
+  background-color: #f9f9f9;
 }
-/*Fim da edição do wrapper*/
+.content{
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+body{
+  font-family: 'Roboto', Helvetica, sans-serif;
+}
+h1,h2,h3,h4{
+  font-family: 'Poppins', Helvetica, sans-serif;
+  font-weight: 800;
+  color: #4d4d4d;
+}
+.btn{
+  display: block;
+  padding: 5px;
+  background-color: #18c3f8;
+  box-shadow: 8px 16px 24px rgba(0, 0, 0, 0.03), -8px 32px 24px rgba(0, 0, 0, 0.01);
+  width: 9rem;
+  text-decoration: none;
+  color: #f9f9f9;
+  border-radius: 4px;
+}
 
-/*===================================*/
-/*Inicio da edição do cabecalho da página*/
-.cabecalho{
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
-    height: 6rem;
+/*Seção de Hero da página*/
+header{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
 }
-@media(max-width: 700px){
-    .cabecalho{
-        flex-direction: column;
-        height: min-content;
-        
-    }
-    .cabecalho > img {
-        margin-top: 20px 0;
-    }
+.hero__elements{
+  width: 90%;
+  height: 75vh;
+  box-sizing: border-box;
+  margin: 0 auto;  
+  font-size: 2rem;
+  box-shadow: 8px 16px 24px rgba(0, 0, 0, 0.03), -8px 32px 24px rgba(0, 0, 0, 0.01);
+  border-radius: 6px;
+  line-height: 3.5rem;
+  display: flex;
+  align-items:center;
+  position: relative;
 }
-.cabecalho::after{
-    content: "";
-    display: flex;
-    position: absolute;
-    width: 100%;
-    height: 94vh;
-    top: 5.5rem;
-    color: black;
-    z-index: -1;
-    background-image: url('/_images/sobre.png');
-    background-size: inherit;
-    background-repeat: no-repeat;
+.hero__text{
+  width: 50%;
+  height: inherit;
 }
-.cabecalho > img{
-    width: 4rem;
-    border-radius: 50%;
+.hero__elements > .btn{
+  align-self: center;
+  left: 44%;
+  top: 80%;
+  position: absolute;
+  
+  
 }
-    .cabecalho__mainmenu ul{
-    display: flex;
-    position: relative;
-    width: 27rem;
-    height: 3rem;
-    border-bottom: 3px solid #eee;
-    border-bottom-left-radius: 3px;
-    border-bottom-right-radius: 3px;
-    }
-        .cabecalho__mainmenu ul li{
-    display: flex;
-    margin: 0 0.5px;
-    box-sizing: border-box;
-    height: 100%;
-    width: 100%;
-    text-align: center;
-        }
-            .cabecalho__mainmenu ul li :only-child{
-    font-weight: 700;
-    flex-grow: 1;
-    font-size: 20px;
-    color: #4285F4;
-    padding: 10px;
-    opacity: 0.7;
+.hero__panel{
+  width: 50%;
+  height: inherit;
+  background-color: #18c3f8;
+  background-image: url('../_img/hero.svg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
 
-            }
-            .cabecalho__mainmenu ul li :first-child:hover{
-                opacity: 1;
-                border-bottom: 3px solid #4285f4;   
-            }
-            .cabecalho__mainmenu ul li :focus{
-                background-color: #f8f8f8;
-                border-left: 1px solid #4285f4;
-                border-right: 1px solid #4285F4;
-                border-top: 1px solid #4285F4;
-                border-bottom: 3px solid #4285F4;
-               border-radius: 3px;
-               box-shadow: 0 1px 4px #ccc;
-            }
-            
-/*Fim da edição do cabecalho da página*/
 
-/*===================================*/
+
+
+
+/*Fim dos Textos que compoem o hero*/
+
+/*Midias sociais do hero*/
+.hero__links{
+  font-size: 1.7rem;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top:25%;
+  left: 0;
+}
+.hero__links ul{
+  list-style: none;
+  margin: 0;padding: 0;
+}
+.hero__links ul li{
+  margin-top: 20px;
+}
+.hero__links ul li a{
+  color: #4d4d4d88;
+}
+.hero__links ul li a:hover{
+  color: #4d4d4d;
+}
+/*Fim daas midias sociais do hero*/
+
+
+/*Menu de navegação*/
+nav{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 4rem;
+}
+  /*Titulo ou futura logo da navegação*/
+nav h1 a{
+  color: #4d4d4d;
+  text-decoration: none;
+  font-size: 1.2rem;
+  display: flex;
+  align-items: baseline;
+  position: relative;
+}
+nav h1 a::after{
+  content: "";
+  display: block;
+  position: absolute;
+  top:80%;left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 5px;
+  opacity: .5;
+  background-color:#18c3f8;
+}
+  /*Fim da edição do titulo ou futura logo da navegação*/
+
+nav ul{
+  display: flex;
+  text-decoration: none;
+  list-style: none;
+}
+nav ul li a{
+  display: block;
+  padding: 10px 20px;
+  margin: 0 20px;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 1.2rem;
+  color: #4d4d4d;
+}
+nav ul :nth-child(4){
+  border: 2px solid #18c3f8;
+  border-radius: 6px;
+  box-shadow: 4px 6px 4px #4d4d4d0a, -4px 6px 6px #4d4d4d0a;
+}
+nav label[for="navbar"]{
+  font-size: 2rem;
+  padding: 0;
+  margin: 0;
+  font-weight: 900;
+  cursor: pointer;
+}
+nav > input{
+  display: none;
+  visibility: hidden;
+}
+
+/*Fim do menu de navegação*/
+
