--- a/scss/component/_c-hamburguer.scss
+++ b/scss/component/_c-hamburguer.scss
@@ -1,46 +1,45 @@
 $component-name:  "c-hamburguer";
 
 .#{$component-name}{
-	border-radius:							50%;
 	border:									none;
 	cursor:									pointer;
 	display: 								block;
-	height: 								rem(60);
+	height: 								rem(50);
 	left: 									rem(20);
 	position:								fixed;
-	width: 									rem(60);
+	width: 									rem(50);
 	transition: 							550ms ease-in;
 	top: 									rem(1.5);
 	z-index: 1;
 	&:hover,
 	&:target{
-		background-color: 					lighten(#EBEBE3,5%);
+		background-color: 					color(brand,light);
 		opacity: 							.7;
 	}
 	&__bar{
-		background-color: 		var(--color-p-black);
+		background-color: 					color(element,e-main);
 		display:							block;
-		height:								rem(5.5);
+		height:								4px;
 		margin: 							50% auto;
 		position:							relative;
-		transition:						all .8s ease-in;
+		transition:							all .8s ease-in;
 		width:								rem(35);
 		&::before,
 		&::after{
-			align-items:				center;
-			background-color:		var(--color-p-black);
+			align-items:					center;
+			background-color:				inherit;
 			content: 						"";
 			display: 						flex;
 			height:							inherit;
 			position:						absolute;
-			transition:					inherit;
+			transition:						inherit;
 			width: 							inherit;
 		}
 		&::before{
 			margin-top: 				25%;
 		}
 		&::after{
-			margin-top: 			  -25%;
+			margin-top: 			  	-25%;
 		}
 	}
 }
@@ -58,22 +57,22 @@ $component-name:  "c-hamburguer";
 		left: 											0;
 	}
 	&:checked ~ .#{$component-name} .#{$component-name}__bar{
-		background-color: 					var(--color-p-primary);
-		border-bottom-right-radius: $global-radius;
-		border-top-left-radius: 		$global-radius;
-		transform:									rotate(45deg);
+		background-color: 					color(brand,primary);
+		border-bottom-right-radius: 		$global-radius;
+		border-top-left-radius: 			$global-radius;
+		transform:							rotate(45deg);
 	}
 	&:checked ~ .#{$component-name} .#{$component-name}__bar::before{
-		background-color: 					var(--color-p-primary);
-		border-bottom-left-radius: 	$global-radius;
-		border-top-right-radius: 		$global-radius;
+		background-color: 					color(brand,primary);
+		border-bottom-left-radius: 			$global-radius;
+		border-top-right-radius: 			$global-radius;
 		bottom:											0;
 		transform:									rotate(90deg);
 	}
 	&:checked ~ .#{$component-name} .#{$component-name}__bar::after{
-		background-color: 					var(--color-p-primary);
-		border-bottom-left-radius:	$global-radius;
-		border-top-right-radius: 		$global-radius;
+		background-color: 					color(brand,primary);
+		border-bottom-left-radius:			$global-radius;
+		border-top-right-radius: 			$global-radius;
 		bottom:											0;
 		transform:									rotate(-90deg);
 	}
