--- a/scss/base/_elements.scss
+++ b/scss/base/_elements.scss
@@ -8,21 +8,73 @@
   -webkit-box-sizing: border-box;
 }
 body{
-  font-family: 'Raleway', sans-serif;
+  background: color(element,e-black);
+  color: color(brand,light);
 }
-h1,
-h2{
-  font-family: 'Montserrat', sans-serif;
-}
-ul li{
-  list-style: none;
+p{
+  text-indent: 10px;
+  font-family: 'Roboto';
 }
 a{
   text-decoration: none;
-  color: var(--color-p-black);
 }
-button{
-  outline: none;
-  border: none;
-  color: var(--color-p-black);
+ul{
+  list-style: none;
+}
+
+article{
+  a{
+    position: relative;
+    color: color(brand,primary);
+    cursor: pointer;
+    &::after{
+      @include pseudo;
+      width: 100%;
+      height: 15%;
+      background-image: linear-gradient(to right, color(harmo,h-base), color(harmo,h-main));
+      left: 0;
+      z-index: -2;
+      bottom: -1px;
+    }
+  }
+  footer{
+   p{
+    font-size: 16px;
+    text-indent: 0px;
+    font-style: italic;
+    text-align: center;
+    padding: rem(10);
+    border-top: .5px solid color(element,e-dark);
+    border-bottom: .5px solid color(element,e-dark);
+   }
+  }
+  .c-main-menu__list{
+    width: 90%;
+    margin: rem(15) auto;
+    background-color: inherit;
+    & li :first-child{
+      margin-top: 0;
+    }
+    @include breakpoint(450){
+      width: rem(350);
+    }
+  }
+  .c-main-menu__link{
+    &::after{
+      content: none;
+    }
+    box-shadow:                   0 1px 3px rgba(0,0,0,0.12),
+    0 1px 2px rgba(0,0,0,0.24);
+    margin: rem(15) auto 0 auto;
+    width: 90%;
+    font-size: 16pt;
+     .fab{
+       display: inline-block;
+       padding-right: 25%;
+     }
+     @include breakpoint(450){
+        width: rem(200);
+    }
+   }
+
 }
