--- a/scss/component/_c-btn.scss
+++ b/scss/component/_c-btn.scss
@@ -1,35 +1,35 @@
 $component-name: "c-btn";
 
 .#{$component-name}{
-  width: fit-content;
-  height: fit-content;
-  padding: 10px 20px;
-  font-size: 12pt;
-  border-radius: $global-radius;
-  cursor: pointer;
-  font-weight: 650;
-  transition: all 650ms;
-  border: 2px solid var(--color-p-white);
-  background-image: linear-gradient(to right,#2EB0E5,#418FF1,#4285F4);
-  color: var(--color-p-white);
-  margin:0 auto;
+  width:                      fit-content;
+  height:                     fit-content;
+  padding:                    10px 20px;
+  font-size:                  12pt;
+  border-radius:              $global-radius;
+  cursor:                     pointer;
+  font-weight:                700;
+  transition:                 all $transition-duration;
+  border:                     2px solid color(element,e-base);
+  color:                      color(element,e-accent);
+  text-align: center;
+
   &:hover{
-    color: var(--color-p-secondary);
-    border: 2px solid var(--color-p-secondary);
-    background: inherit;
-    transform: scale(1.01);
+    color:                    color(element,e-main);
+    border:                   2px solid color(element,e-main);
+    background:               inherit;
+    transform:                scale(1.01);
   }
   &:focus{
-    background: inherit;
-    border: 2px solid var(--color-p-white);
-    @include                      box-shadow(
-      2px 2px 4px darken(#EBEBE3, 6%),
-      -2px -2px 6px lighten(#EBEBE3,4%)
-    );
-    color: var(--color-p-primary);
+    background:               inherit;
+    border:                   2px solid color(brand,light);
+    box-shadow:               2px 2px 4px darken(color(brand,light), 6%),-2px -2px 6px lighten(color(brand,light),4%);
+    color:                    color(brand,primary);
   }
   .fas{
-    margin:                           0px 20px 0px 0px;
-    font-size:                        rem(17);
+    display: inline-block;
+    margin-right: 15px;
+    font-size:                rem(17);
+    border-right: .35px solid color(element,e-base);
+    padding: 0 20px;
   }
 }
