--- a/scss/component/_c-info-card.scss
+++ b/scss/component/_c-info-card.scss
@@ -4,27 +4,28 @@ $component-name: "c-info-card";
   margin-top:                       rem(-25);
   width:                            100%;
   height:                           rem(75);
-  font-size:                        10pt;
+  font-size:                        16px;
   padding:                          rem(5);
   position:                         relative;
-  color:                            var(--color-p-black);
-  background-color:                 var(--color-p-white);
+  color:                            inherit;
+  background-color:                 color(element,e-black);
   border-radius:                    $global-radius;
-  transition:                       transform 650ms;
+  transition:                       $transition-duration;
   &:hover{
-    transform:                      scale(1.02);
+    transform: scale(.98);
   }
   h3,h4{
     font-family:                   'Raleway',Helvetica;
   }
   h3{
-    font-style:                     5pt;
-    @include                        transparent-text (#2EB0E5,#418FF1,#4285F4)
+    font-style:                     20px;
+    @include                      transparent-text(#E5D02E,#E52E66,darken(#E52E66,5%));
   }
   h4{
-    font-size:                       7pt;
-    opacity:                         .7;
-    font-style:                      italic;
+    font-size:                        10px;
+    opacity:                          .7;
+    letter-spacing:                   1.5px;
+    font-weight:                      normal;
   }
   figure{
     img{
