--- a/scss/component/_c-main-menu.scss
+++ b/scss/component/_c-main-menu.scss
@@ -10,42 +10,41 @@ $component-name: 'c-main-menu';
     top:                            85%;
     z-index:                        -1;
     transform:                      translate(-50%);
-    background-color:               var(--color-p-white);
+    background-color:               lighten(color(brand,light),2%);
     border-radius:                  50%;
     height:                         rem(50);
     width:                          rem(50);
   }
   &__list{
-    background-color:               var(--color-p-white);
+    background-color:               lighten(color(brand,light),2%);
     border-radius:                  rem(4);
     overflow:                       hidden; 
-    @include                        flexbox();
-    @include                        flex-direction(column); 
+    display:                        flex;
+    flex-direction:                 column; 
     li{
       margin:                       rem(9);
     }
   }
   &__link{
-    @include                        flexbox;
-    @include                        align-items(center);
-    color:                          var(--color-p-primary);
-    background-color:               var(--color-p-white);
+    display:                        flex;
+    align-items:                    center;
+    color:                          color(brand,primary);
+    background-color:               color(brand,light);
     padding:                        rem(10) rem(15);
-    font-family:                    'Montserrat', sans-serif;
-    font-weight:                    450;
-    border-radius:                  rem(4);
-    @include                        box-shadow(
-                                      2px 2px 8px lighten(#969691,35%),
-                                        -2px 2px 8px lighten(#C0C0B9,10%));
+    font-family:                    'Raleway', sans-serif;
+    font-weight:                    600;
+    border-radius:                  $global-radius;
+    box-shadow:                      2px 2px 8px color(light,l-white-3),
+                                     -2px 2px 8px color(light,l-white-5);
     transition:                     all 550ms ease-in;
     &:hover{
-      background-color:             var(--color-p-primary);
-      color:                        var(--color-p-white);
+      background-color:             color(brand,primary);
+      color:                        color(brand,light);
       transform:                    scale(1.02);
     }
     &:focus{
-      background-color:             var(--color-p-secondary);
-      color:                        var(--color-p-white);
+      background-color:             color(brand,secondary);
+      color:                        color(brand,light);
       transform:                    scale(1.02);
     }
     .fas{
