--- a/scss/layout/_l-about.scss
+++ b/scss/layout/_l-about.scss
@@ -3,21 +3,32 @@ $component-name: "l-about";
 
 ##{$component-name}{
     position:                         relative;
-    color:                            var(--color-p-black);
     min-height:                       100vh;
     width:                            100%;
     font-size:                        20pt;
     .c-wrapper{
         margin:                           rem(100) auto;
-        @include                          flexbox;
-        @include                          flex-direction(column);
-        @include                          align-items(center);
+        display:                          flex;
+        flex-direction:                   column;
+        align-items:                      center;
         @include breakpoint(medium-up){
             display: block;
         }
     }
     figure{
-        flex:                          1;
+            flex:                          1;
+            position: relative;
+            &::after{
+                position: absolute;
+                content: "";
+                width: 100%;
+                height: 100%;
+                background-color: color(brand,primary);
+                z-index: -1;
+                border-radius: $global-radius;
+                bottom: rem(-9);
+                left: rem(-7);
+            }
         @include breakpoint(medium-up){
             display:                      block;
             width:                        fit-content;
@@ -31,12 +42,12 @@ $component-name: "l-about";
           object-fit:                   contain;
           height:                       100%;
           border-radius:                $global-radius;
-          @include                      box-shadow(0 1px 3px rgba(0,0,0,0.12),
-                                        0 1px 2px rgba(0,0,0,0.24));
+          box-shadow:                   0 1px 3px rgba(0,0,0,0.12),
+                                        0 1px 2px rgba(0,0,0,0.24);
           transition:                   box-shadow 1.5s cubic-bezier(.25,.8,.25,1);
           &:hover{
-            @include                    box-shadow(0 14px 28px rgba(0,0,0,0.25),
-                                        0 10px 10px rgba(0,0,0,0.22));
+          box-shadow:                   0 14px 28px rgba(0,0,0,0.25),
+                                        0 10px 10px rgba(0,0,0,0.22);
           }
       }
         figcaption{
