--- a/scss/layout/_l-header.scss
+++ b/scss/layout/_l-header.scss
@@ -1,58 +1,60 @@
 $component-name:  "l-header";
+$element-name:    "hero";
 
 .#{$component-name}{
-  background-color:         var(--color-p-white);
-  height:                   100vh;
-  width:                    100%;
-  @include                  flexbox;
-  @include                  flex-direction(column);
-  @include                  justify-content(space-evenly);
-  @include                  align-items(center);
-  @include breakpoint(large-up){
-    .c-btn{
-      padding:              10px 25px;
-      font-size:            18pt;
-      font-weight:          350;
-    }
-  }
-  .landing{
-    padding:                rem(15);
-    margin:                 7.5% auto;
-    width:                  100%;
-    height:                 fit-content;
-    h1,
-    h2{
-      font-family:          'Raleway',Helvetica;
-      @include              transparent-text (#2EB0E5,#418FF1,#4285F4);
-    }
-    h1{
-      font-size:            rem(65);
-    }
-    h2{
-      font-size:            rem(32.5);
-      margin-bottom:        rem(21);
-    }
-    p{
-      font-size: 13pt;
-    }
-    @include breakpoint(large-up){
-      padding:              rem(10);
-      width:                80%;
-      margin:               0 auto;
-      min-width:            rem($global-max-width);
-      h1{
-        font-size:          78pt;
-        width:              100%;
+  display: grid;
+  width: 100vw;
+  max-width: 100%;
+  height: 100vh;
+  justify-content: space-around;
+  align-items: center;
+  .#{$element-name}{
+    font-family: 'Raleway', sans-serif;
+    padding: rem(10);
+    position: relative;
+    align-self: center;
+    height: 70vh;
+    &__landing{
+      .hero__title{
+        h1{
+          @include                      transparent-text(color(harmo,h-accent-1),color(harmo,h-accent-2),darken(color(harmo,h-accent-2),5%));
+          font-size: rem(75);
+        }
+        h2{
+          @include                      transparent-text (color(brand,primary),color(brand,secondary),darken(color(brand,secondary),5%));
+          margin: rem(10) 0 rem(15) 0;
+          font-size: rem(37.5);
+        }
       }
-      h2{
-        font-size:          39pt;
+    }
+
+
+    @include breakpoint(small-up){
+      &__landing{
+        width: rem(418);
       }
-      p{
-        font-size:          20pt;
+      &__title{
+        h1{
+          font-size: rem(90);
+        }
+        h2{
+          font-size:rem(40);
+        }
       }
     }
   }
-  .c-btn{
-    margin-top: rem(-25);
+  .c-main-menu__link{
+    box-shadow:                   0 1px 3px rgba(0,0,0,0.12),
+    0 1px 2px rgba(0,0,0,0.24);
+    margin: rem(15) auto 0 auto;
+    width: 90%;
+    font-size: 16pt;
+     .fab{
+       display: inline-block;
+       padding-right: 25%;
+     }
+     @include breakpoint(450){
+        width: rem(200);
+    }
+   }
   }
-}
