--- a/scss/layout/_l-technologies.scss
+++ b/scss/layout/_l-technologies.scss
@@ -3,7 +3,6 @@ $component-name: "l-technologies";
 .#{$component-name}{
     width:                      100%;
     min-height:                 25vh;
-    background-color:           var(--color-w-invert);
     margin:                     rem(20) auto 0 auto;
     .c-wrapper{
         display:                grid;
@@ -29,20 +28,18 @@ $component-name: "l-technologies";
         padding:                        rem(10);
         width:                          rem(250);
         height:                         rem(200);
-        background-color:               var(--color-w-invert);
         border-radius:                  $global-radius;
-        @include                        box-shadow(0 1px 3px rgba(0,0,0,0.12),
-                                            0 1px 2px rgba(0,0,0,0.24));
+        box-shadow:                     0 1px 3px rgba(0,0,0,0.12),
+                                        0 1px 2px rgba(0,0,0,0.24);
         transition:                     background-color 1.4s, box-shadow 1.5s cubic-bezier(.25,.8,.25,1);
         &:hover{
-            @include                    box-shadow(0 14px 28px rgba(0,0,0,0.25),
-                                            0 10px 10px rgba(0,0,0,0.22));
-            background-color:           var(--color-p-dark);
+            box-shadow:                  0 14px 28px rgba(0,0,0,0.25),
+                                         0 10px 10px rgba(0,0,0,0.22);
         }
         svg{
             display:                    block;
             width:                      100%;
-            height:                     fit-content;
+            height:                     100%;
             filter:                     grayscale(1);
             transition:                 transform 1.2s, filter 650ms ease;
             &:hover{
