--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,178 +1,288 @@
-@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,500;1,300&family=Raleway:wght@700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300&family=Raleway:wght@700&display=swap');
+
 :root {
-  --color-primary: #1DED91;
-  --color-primary-light: #8AFFCB;
-  --color-light-01: #C0C8C5;
-  --color-light-02: #DAE2DE;
-  --color-light-03: #F0FFF8;
-  --color-dark-01: #1A1F1D;
-  --color-dark-02: #272C2A;
-  --color-dark-03: #303633;
-  --font-body: JetBrains Mono, monospace;
-  --font-title: Raleway, sans-serif; }
+  --primary:        #1DED91;
+  --primary-light:  #8AFFCB;
+  --gray-01:        #D8DAD9;
+  --gray-02:        #C7CCCA;
+  --light-01:       #F0FFF8;
+  --dark-01:        #2C302E;
+  --dark-02:        #272C2A;
+  --dark-03:        #1A1F1D;
+  --typography-body: 'JetBrains Mono', monospace;
+  --typography-title: 'Raleway', sans-serif;
+  --module-size: 30px;
+  --default-radius: 4px;
+}
 
-html {
-  box-sizing: border-box; }
+/* 
+  Reset elements
+*/
 
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
+body,
+body *{
+  box-sizing: border-box;
   margin: 0;
-  outline-offset: 0.25rem;
-  padding: 0; }
+  padding: 0;
+}
 
-a {
-  color: inherit;
-  cursor: pointer;
-  text-decoration: none; }
+body{
+  background: var(--dark-03);
+  color: var(--gray-01);
+  font-size: 16px;
+}
 
-img {
-  max-width: 100%; }
+a{
+  color: currentColor;
+  text-decoration: none;
+}
 
-body {
-  background-color: var(--color-dark-01);
-  color: var(--color-light-01);
-  font-family: var(--font-body);
-  font-size: 1rem;
-  font-style: italic; }
+ul{
+  list-style: none;
+}
 
-ul {
-  list-style: none; }
+h1,
+h2{
+  font-size: 100%;
+}
 
-.sr-only {
-  height: 1px;
-  left: -10000px;
-  overflow: hidden;
-  position: absolute;
-  top: auto;
-  width: 1px; }
-
-.l-home {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 45vh;
-  gap: 30px; }
-  .l-home > :nth-child(1) {
-    width: 50%; }
-  .l-home > :nth-child(2) img {
-    margin-top: 5.625rem; }
-
-.c-wrapper {
+/* 
+  Components
+*/
+.wrapper{
+  max-width: 1170px;
   margin: 0 auto;
-  max-width: 1120px;
-  padding: 0 0.625rem; }
+}
 
-.c-content p {
-  margin: 30px 0; }
+.paragraph{
+  font-family: var(--typography-body);
+  line-height: 1.5;
+}
 
-.c-menu {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 1.875rem 0; }
-  .c-menu__left, .c-menu__right {
-    font-family: var(--font-title);
-    font-size: 1rem;
-    font-style: normal;
-    color: var(--color-light-01);
-    display: inherit;
-    overflow: hidden;
-    gap: 1.875rem; }
-  .c-menu__item a {
-    display: block;
-    padding: 0.625rem 1.25rem;
-    position: relative; }
+h2.paragraph{
+  font-size: 24px;
+  margin-top: 15px;
+}
 
-.c-headline {
-  margin: 5.625rem 0 1.875rem 0; }
-
-.c-title {
-  color: var(--color-light-03);
-  font-family: var(--font-title);
-  font-style: normal;
+.title,
+.menu__link,
+.button,
+.button--as-link,
+.social__link{
+  font-family: var(--typography-title);
   font-weight: 700;
-  font-size: 1.5rem; }
+}
 
-.c-subtitle {
-  color: var(--color-light-01);
-  font-size: 0.66687rem; }
-  .c-subtitle::after {
-    content: '';
-    margin: 10px 0 15px 0;
-    display: block;
-    background-color: var(--color-primary);
-    height: 0.03125rem;
-    width: 2.5rem; }
+.menu__link,
+.button,
+.button--as-link,
+.social__link{
+  display: block;
+  cursor: pointer;
+  padding: 10px 20px;
+}
+.menu__link,
+.subtitle{
+  position: relative;
+}
 
-.c-call-to-action {
-  display: flex;
-  align-items: center;
-  gap: 1.875rem;
-  margin: 1.875rem 0 5.625rem 0; }
+.menu__link{
+  overflow-x: hidden;
+}
 
-.c-button,
-.c-button--clean {
-  border-radius: 0.25rem;
-  display: flex;
-  font-family: var(--font-title);
-  font-size: 1rem;
-  font-style: normal;
-  gap: 0.9375rem;
-  align-items: center;
-  padding: 0.625rem 1.25rem;
-  width: fit-content;
-  transition: background-color 350ms, border-color 350ms; }
+.title{
+  color: var(--light-01);
+  font-size: 36px;
+}
 
-.c-button {
-  color: var(--color-dark-01);
-  background-color: var(--color-primary); }
-  .c-button:hover {
-    background-color: var(--color-primary-light); }
+.subtitle:not(p){
+  color: var(--gray-02);
+}
 
-.c-divider {
-  border: .5px solid #272C2A; }
-
-.c-social {
-  display: flex;
-  gap: 1.875rem;
-  width: fit-content;
-  border-top: 1px solid var(--color-dark-02);
-  padding-top: 30px; }
-  .c-social__item {
-    display: flex;
-    align-items: center; }
-    .c-social__item::before {
-      content: "";
-      display: inline-block;
-      width: 0.4375rem;
-      background-color: var(--color-primary);
-      height: 0.4375rem;
-      border-radius: 50%;
-      margin-right: 0.9375rem; }
-  .c-social__link:hover {
-    color: var(--color-light-03); }
-
-.c-gallery {
-  display: grid;
-  grid-template-columns: repeat(5 1fr);
-  gap: 0.9375rem;
-  background-color: black;
-  grid-template-areas: 'horizo' 'horizo' 'horizo' 'vert' 'vert' 'horizo' 'horizo'; }
-
-.is-active::after {
-  background-color: var(--color-primary);
+.is-active::after{
+  background: var(--primary);
+  border-radius: var(--default-radius);
   bottom: 0;
   content: "";
   display: block;
   height: 2px;
-  left: -55px;
-  opacity: .2;
+  left: -200px;
+  opacity: 0;
   position: absolute;
-  transition: left 350ms, opacity 400ms;
-  width: 2.5rem; }
+  width: 40px;
+  transition: all 650ms ease-out;
 
+}
 .is-active:hover::after {
-  left: -5px;
-  opacity: 1; }
+  opacity: 1;
+  left: 0;
+}
+
+.button{
+  background: var(--primary);
+  width: max-content;
+  border-radius: var(--default-radius);
+  padding: 10px 50px;
+  color: var(--dark-03);
+  transition: background-color 300ms ease-in;
+}
+
+.button:hover{
+  background: var(--primary-light);
+}
+
+article{
+  align-items: center;
+  display: flex;
+  gap: calc(var(--module-size) * 2);
+  justify-content: center;
+}
+
+/* 
+  Interface
+*/
+
+/* 
+  -- Menu
+*/
+
+.menu{
+  display: flex;
+  justify-content: space-between;
+  padding: var(--module-size);
+}
+
+.menu__left,
+.menu__right{
+  display: inherit;
+  gap: var(--module-size);
+}
+
+/* 
+  Texts
+*/
+
+.headline{
+  margin-bottom: calc(var(--module-size) * 2);
+}
+
+.headline .subtitle::after{
+  background: var(--primary);
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 0;
+  margin: 10px 0 15px 0;
+  width: var(--module-size);
+}
+
+
+.call-to-action{
+  align-items: center;
+  display: flex;
+  gap: 30px;
+  padding: var(--module-size) 0 var(--module-size) 0;
+}
+
+.social{
+  border-top: .5px solid var(--dark-02);
+  display: flex;
+  gap: var(--module-size);
+  padding-top: 30px;
+  width: max-content;
+}
+
+.social__link::before{
+  background: var(--primary);
+  border-radius: 50%;
+  content: "";
+  display: inline-block;
+  height: 8px;
+  margin-right: 15px;
+  vertical-align: middle;
+  width: 8px;
+}
+
+/* 
+
+  About
+
+*/
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 15px;
+}
+
+.services article{
+  flex-direction: column;
+  text-align: center;
+}
+
+/* .services h2.subtitle{
+  display: block;
+  max-width: max-content;
+  margin: 0 auto;
+} */
+
+.services .subtitle::after{
+  inset: 0;
+}
+
+
+/* @media all and (min-width: 320px) {
+  .grid-gallery {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media all and (min-width: 768px) {
+  .grid-gallery {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media all and (min-width: 1024px) {
+  .grid-gallery {
+    grid-template-columns: repeat(6, 1fr);
+  }
+}
+
+.grid-gallery__item:nth-child(11n+1) {
+  grid-column: span 1;
+}
+
+.grid-gallery__item:nth-child(11n+4) {
+  grid-column: span 2;
+  grid-row: span 1;
+}
+
+.grid-gallery__item:nth-child(11n+6) {
+  grid-column: span 3;
+  grid-row: span 1;
+}
+
+.grid-gallery__item:nth-child(11n+7) {
+  grid-column: span 1;
+  grid-row: span 2;
+}
+
+.grid-gallery__item:nth-child(11n+8) {
+  grid-column: span 2;
+  grid-row: span 2;
+}
+
+.grid-gallery__item:nth-child(11n+9) {
+  grid-row: span 3;
+}
+
+.grid-gallery__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+ */
