--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -331,8 +331,64 @@ h2.paragraph{
   width: 100%;
 }
 
+/* 
+  Contact
+*/
 
+  form{
+    /* background-color: red; */
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
 
+  form .button{
+    margin-top: 60px;
+  }
+
+  input{
+    outline: none;
+    border: none;
+  }
+
+  .input{
+    background: var(--dark-03);
+    border-radius: var(--default-radius);
+    color: #747272;
+    display: block;
+    font-family: var(--typography-body);
+    font-size: 16px;
+    font-weight: 700;
+    padding: 15px 15px;
+  }
+
+ 
+/* 
+  Footer
+*/
+
+  .footer{
+    display: flex;
+    gap: var(--module-size);
+    padding: calc(var(--module-size) * 3) 0 calc(var(--module-size) * 3) 0;
+  }
+
+  .footer .input{
+    background-color: #747272;
+    color: var(--dark-03);
+  }
+
+  .footer > :nth-child(1){
+    flex: auto;
+  }
+
+  .footer > :nth-child(2){
+    flex: 1;
+  }
+
+  .footer > :nth-child(3){
+    flex: 1;
+  }
 /* 
   States
 */
