--- a/assets/style/scss/components/_c-divider.scss
+++ b/assets/style/scss/components/_c-divider.scss
@@ -5,5 +5,5 @@ $component-name: 'c-divider';
     width: 100%;
     height: 1px;
     background: linear-gradient(90deg, rgba(29, 32, 31, 0.5) -0.7%, #303633 100.26%);
-    margin: 0 0 30px 0px;    
+    // margin: 0 0 30px 0px;    
 }
