--- a/assets/style/scss/style.css
+++ b/assets/style/scss/style.css
@@ -80,8 +80,21 @@ a {
   font-weight: 600;
   letter-spacing: -0.05em;
   line-height: 35px;
-  overflow: hidden;
+  overflow-x: hidden;
+  padding-top: 15px;
   position: relative;
+  z-index: 1;
+}
+
+.typ-subtitle::after {
+  background-color: currentColor;
+  border-radius: 4px;
+  content: "";
+  height: 4px;
+  left: -50px;
+  position: absolute;
+  top: 0px;
+  width: 70px;
 }
 
 .typ-button,
@@ -205,7 +218,6 @@ a {
   height: 1px;
   background: -webkit-gradient(linear, left top, right top, color-stop(-0.7%, rgba(29, 32, 31, 0.5)), color-stop(100.26%, #303633));
   background: linear-gradient(90deg, rgba(29, 32, 31, 0.5) -0.7%, #303633 100.26%);
-  margin: 0 0 30px 0px;
 }
 
 .c-button,
@@ -266,13 +278,29 @@ a {
   width: -moz-max-content;
   width: max-content;
   margin-top: 30px;
+  gap: 30px;
 }
 
 .c-card {
-  background: var(--dark-00);
+  background-color: var(--dark-00);
   border-radius: 4px;
-  border: 2px solid var(--dark-02);
   width: 300px;
+  position: relative;
+}
+
+.c-card::after {
+  background: var(--dark-02);
+  border-radius: inherit;
+  content: "";
+  display: block;
+  height: 102%;
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 102%;
+  z-index: -1;
 }
 
 .c-card__img {
@@ -293,11 +321,60 @@ a {
 }
 
 .c-card__content {
+  position: inherit;
   padding: 27px;
+}
+
+.dev:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.dev .typ-subtitle::after {
+  left: 0;
+  background: var(--dev-gradient);
+}
+
+.dev::after {
+  background: var(--dev-gradient);
+}
+
+.dev::after:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.l-hero {
+  margin-top: 30px;
 }
 
 .l-hero .typ-title {
   word-break: break-word;
   margin: 30px 0;
+}
+
+.l-hero .typ-subtitle::after {
+  display: none;
+}
+
+.l-about {
+  background: var(--dark-01);
+  position: relative;
+  padding-top: 30px;
+  z-index: 1;
+}
+
+.l-about article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.l-about article > :nth-child(1) {
+  display: inherit;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
+  min-width: 60%;
 }
 /*# sourceMappingURL=style.css.map */
