--- a/assets/style/scss/components/_c-menu.scss
+++ b/assets/style/scss/components/_c-menu.scss
@@ -1,42 +1,49 @@
 $component-name: 'c-menu';
 
 .#{$component-name}{
+
     align-items: center;
     display: flex;
+    font-size: $globalSize * 1.75;
     justify-content: space-between;
-    font-size: 14px;
     &__left,
     &__right{
         align-items: inherit;
         display: inherit;
-        gap: 30px;
+        gap: var(--size-lg);
         justify-content: inherit;
         list-style: none;
     }
     &__link{
+        color: var(--gray-02);
         position: relative;
         display: block;
-        padding: 30px 0;
-        transition: all 150ms ease-in-out;
+        padding: var(--size-lg) 0;
+        transition: all 350ms ease-in;
+        overflow-y: hidden;
 
         &::before{
             background: var(--primary-default);
-            border-radius: 4px;
             bottom: 0;
             content: "";
             display: block;
-            height: 2px;
-            left: 0;
-            opacity: 0;
+            height: ($globalSize / 4);
+            left: -100%;
             position: absolute;
+            transition: all 350ms ease-in;
+
             width: 100%;
         }
-
+        
         &:hover{
-            color: var(--gray-00);
+            color: #fff;
             &::before{
-                opacity: 1;
+                left: 0;
             }
         }
     }
+}
+
+.#{$component-name}.typ-body{
+    margin: 0;
 }
