--- a/assets/style/scss/components/typography/_typ-body.scss
+++ b/assets/style/scss/components/typography/_typ-body.scss
@@ -1,8 +1,9 @@
 $component-name: 'typ-body';
 
 .#{$component-name}{
+    font-size: var(--font-md);
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
     line-height: 21px;
+    margin: var(--size-lg) 0 var(--size-xl) 0;
 }
