--- a/assets/style/scss/components/_c-button.scss
+++ b/assets/style/scss/components/_c-button.scss
@@ -4,9 +4,8 @@ $component-name: 'c-button';
 .#{$component-name}--as-link{
     align-items: center;
     border-radius: $global-radius;
-    color: currentColor;
     display: flex;
-    gap: $global-gap;
+    gap: 32px;
     padding: 15px 30px;
     text-decoration: none;
     position: relative;
