--- a/assets/style/scss/components/_c-card.scss
+++ b/assets/style/scss/components/_c-card.scss
@@ -2,37 +2,32 @@ $component-name: 'c-card';
 
 .#{$component-name}{
     background-color: var(--dark-00);
+    border: 3px solid var(--dark-02);
     border-radius: 4px;
-    width: 300px;
+    max-width: 300px;
     position: relative;
-    
-    &::after{
-        background: var(--dark-02);
-        border-radius: inherit;
-        content: "";
-        display: block;
-        height: 102%;
-        left: 50%;
-        position: absolute;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        width: 102%;
-        z-index: -2;
-    }
-    
+    transition: transform 480ms ease-in-out, border 480ms ease-in-out;
+    transform: translateY(0);
 
+    &:hover{
+        transform: translateY(-10px);
+        border-image-slice: 1;
+    }
     &__img{
         display: block;
-        height: 125px;
+        height: calc(var(--size-xl) * 2);
         object-fit: cover;
-        width: 100%;
         transition: transform 350ms;
+        width: 100%;
+        border-top-left-radius: inherit;
+        border-top-right-radius: inherit;
+
         &:hover{
             transform: scale(1.04) ;
         }
     }
+
     &__content{
-        position: inherit;
-        padding: 27px;
+        padding: var(--size-md);
     }
 }
