--- a/assets/style/scss/components/colors/_clr-dmm.scss
+++ b/assets/style/scss/components/colors/_clr-dmm.scss
@@ -1,15 +1,20 @@
 $component-name: 'clr-DMM';
 
 .#{$component-name}{
-    background: var(--DMM-default);
+    background: var(--DMM-00);
     color: var(--DMM-03);
-
     &:hover{
-        background: var(--DMM-00);
+        background: var(--DMM-default);
     }
-
+    
     &:active{
         background: var(--DMM-03);
         color: var(--DMM-00);
+    }
+}
+
+.#{$component-name}--card{
+    &:hover{
+        border-image: var(--DMM-gradient);
     }
 }
