--- a/assets/style/scss/components/colors/colors-glob.css
+++ b/assets/style/scss/components/colors/colors-glob.css
@@ -1,24 +1,29 @@
 .clr-primary {
-  background: var(--primary-default);
-  color: var(--primary-03);
+  background: var(--primary-00);
+  color: var(--dark-02);
 }
 
 .clr-primary:hover {
-  background: var(--primary-00);
+  background: var(--primary-default);
 }
 
 .clr-primary:active {
   background: var(--primary-03);
-  color: var(--primary-00);
+  color: var(--dark-02);
+}
+
+.clr-primary--card:hover {
+  -o-border-image: var(--primary-gradient);
+     border-image: var(--primary-gradient);
 }
 
 .clr-dev {
-  background: var(--dev-default);
+  background: var(--dev-00);
   color: var(--dev-03);
 }
 
 .clr-dev:hover {
-  background: var(--dev-00);
+  background: var(--dev-default);
 }
 
 .clr-dev:active {
@@ -26,17 +31,27 @@
   color: var(--dev-00);
 }
 
+.clr-dev--card:hover {
+  -o-border-image: var(--dev-gradient);
+     border-image: var(--dev-gradient);
+}
+
 .clr-DMM {
-  background: var(--DMM-default);
+  background: var(--DMM-00);
   color: var(--DMM-03);
 }
 
 .clr-DMM:hover {
-  background: var(--DMM-00);
+  background: var(--DMM-default);
 }
 
 .clr-DMM:active {
   background: var(--DMM-03);
   color: var(--DMM-00);
+}
+
+.clr-DMM--card:hover {
+  -o-border-image: var(--DMM-gradient);
+     border-image: var(--DMM-gradient);
 }
 /*# sourceMappingURL=colors-glob.css.map */
