--- a/assets/style/scss/components/typography/_typ-subtitle.scss
+++ b/assets/style/scss/components/typography/_typ-subtitle.scss
@@ -2,15 +2,14 @@ $component-name: 'typ-subtitle';
 
 .#{$component-name}{
     color: var(--gray-03);
-    font-size: 24px;
+    font-size: var(--font-lg);
     font-weight: 600;
     letter-spacing: -0.05em;
     line-height: 35px;
     overflow-x: hidden;
-    padding-top: 15px;
+    padding-top: var(--size-md);
     position: relative;
     z-index: 1;
-
     &::after{
         background-color: currentColor;
         border-radius: 4px;
@@ -19,6 +18,6 @@ $component-name: 'typ-subtitle';
         left: -50px;
         position: absolute;
         top: 0px;
-        width: 70px;
+        width: var(--size-xl);
     }
 }
