--- a/assets/style/scss/components/typography/typography-glob.css
+++ b/assets/style/scss/components/typography/typography-glob.css
@@ -1,37 +1,39 @@
 .typ-body {
+  font-size: var(--font-md);
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
   line-height: 21px;
+  margin: var(--size-lg) 0 var(--size-xl) 0;
 }
 
 .typ-title {
   color: var(--gray-01);
-  font-size: 48px;
-  letter-spacing: -0.02em;
+  font-size: var(--font-xl);
   font-weight: 700;
+  letter-spacing: -0.02em;
   line-height: 54px;
   position: relative;
+  margin-bottom: var(--size-sm);
 }
 
 .typ-title::after {
+  margin: var(--size-md) 0 var(--size-lg) 0;
+  background: currentColor;
+  border-radius: 4px;
   content: "";
   display: block;
-  background: currentColor;
   height: 2px;
-  border-radius: 4px;
   width: 70px;
-  margin: 30px 0 60px 0;
 }
 
 .typ-subtitle {
   color: var(--gray-03);
-  font-size: 24px;
+  font-size: var(--font-lg);
   font-weight: 600;
   letter-spacing: -0.05em;
   line-height: 35px;
   overflow-x: hidden;
-  padding-top: 15px;
+  padding-top: var(--size-md);
   position: relative;
   z-index: 1;
 }
@@ -44,7 +46,7 @@
   left: -50px;
   position: absolute;
   top: 0px;
-  width: 70px;
+  width: var(--size-xl);
 }
 
 .typ-button,
