--- a/assets/style/scss/layout/_l-hero.scss
+++ b/assets/style/scss/layout/_l-hero.scss
@@ -1,12 +1,10 @@
 $component-name: 'l-hero';
 
 .#{$component-name}{
-    margin-top: 30px;
-    .typ-title{
-        word-break: break-word;
-        margin: 30px 0;
+    & > :first-child{
+        margin-bottom: var(--size-md);
     }
-
+ 
     .typ-subtitle{
         &::after{
             display: none;
