--- a/assets/style/scss/layout/l-layout-glob.css
+++ b/assets/style/scss/layout/l-layout-glob.css
@@ -1,10 +1,5 @@
-.l-hero {
-  margin-top: 30px;
-}
-
-.l-hero .typ-title {
-  word-break: break-word;
-  margin: 30px 0;
+.l-hero > :first-child {
+  margin-bottom: var(--size-md);
 }
 
 .l-hero .typ-subtitle::after {
