--- a/assets/style/scss/style.css
+++ b/assets/style/scss/style.css
@@ -26,6 +26,13 @@
   --DMM-02: #af670e;
   --DMM-03: #683d08;
   --DMM-gradient: linear-gradient(224.22deg, #ED8F1D -15.75%, rgba(248, 213, 170, 0.5) 113.02%);
+  --size-sm: 0.5rem;
+  --size-md: 1rem;
+  --size-lg: 2rem;
+  --size-xl: 4rem;
+  --font-md: 1rem;
+  --font-lg: 1.5rem;
+  --font-xl: 3rem;
 }
 
 *,
@@ -49,39 +56,41 @@ a {
 }
 
 .typ-body {
+  font-size: var(--font-md);
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
   line-height: 21px;
+  margin: var(--size-lg) 0 var(--size-xl) 0;
 }
 
 .typ-title {
   color: var(--gray-01);
-  font-size: 48px;
-  letter-spacing: -0.02em;
+  font-size: var(--font-xl);
   font-weight: 700;
+  letter-spacing: -0.02em;
   line-height: 54px;
   position: relative;
+  margin-bottom: var(--size-sm);
 }
 
 .typ-title::after {
+  margin: var(--size-md) 0 var(--size-lg) 0;
+  background: currentColor;
+  border-radius: 4px;
   content: "";
   display: block;
-  background: currentColor;
   height: 2px;
-  border-radius: 4px;
   width: 70px;
-  margin: 30px 0 60px 0;
 }
 
 .typ-subtitle {
   color: var(--gray-03);
-  font-size: 24px;
+  font-size: var(--font-lg);
   font-weight: 600;
   letter-spacing: -0.05em;
   line-height: 35px;
   overflow-x: hidden;
-  padding-top: 15px;
+  padding-top: var(--size-md);
   position: relative;
   z-index: 1;
 }
@@ -94,7 +103,7 @@ a {
   left: -50px;
   position: absolute;
   top: 0px;
-  width: 70px;
+  width: var(--size-xl);
 }
 
 .typ-button,
@@ -111,26 +120,31 @@ a {
 }
 
 .clr-primary {
-  background: var(--primary-default);
-  color: var(--primary-03);
+  background: var(--primary-00);
+  color: var(--dark-02);
 }
 
 .clr-primary:hover {
-  background: var(--primary-00);
+  background: var(--primary-default);
 }
 
 .clr-primary:active {
   background: var(--primary-03);
-  color: var(--primary-00);
+  color: var(--dark-02);
+}
+
+.clr-primary--card:hover {
+  -o-border-image: var(--primary-gradient);
+     border-image: var(--primary-gradient);
 }
 
 .clr-dev {
-  background: var(--dev-default);
+  background: var(--dev-00);
   color: var(--dev-03);
 }
 
 .clr-dev:hover {
-  background: var(--dev-00);
+  background: var(--dev-default);
 }
 
 .clr-dev:active {
@@ -138,18 +152,28 @@ a {
   color: var(--dev-00);
 }
 
+.clr-dev--card:hover {
+  -o-border-image: var(--dev-gradient);
+     border-image: var(--dev-gradient);
+}
+
 .clr-DMM {
-  background: var(--DMM-default);
+  background: var(--DMM-00);
   color: var(--DMM-03);
 }
 
 .clr-DMM:hover {
-  background: var(--DMM-00);
+  background: var(--DMM-default);
 }
 
 .clr-DMM:active {
   background: var(--DMM-03);
   color: var(--DMM-00);
+}
+
+.clr-DMM--card:hover {
+  -o-border-image: var(--DMM-gradient);
+     border-image: var(--DMM-gradient);
 }
 
 .c-wrapper {
@@ -165,10 +189,10 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-size: 0.875rem;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  font-size: 14px;
 }
 
 .c-menu__left, .c-menu__right {
@@ -176,7 +200,7 @@ a {
       -ms-flex-align: inherit;
           align-items: inherit;
   display: inherit;
-  gap: 30px;
+  gap: var(--size-lg);
   -webkit-box-pack: inherit;
       -ms-flex-pack: inherit;
           justify-content: inherit;
@@ -184,32 +208,38 @@ a {
 }
 
 .c-menu__link {
+  color: var(--gray-02);
   position: relative;
   display: block;
-  padding: 30px 0;
-  -webkit-transition: all 150ms ease-in-out;
-  transition: all 150ms ease-in-out;
+  padding: var(--size-lg) 0;
+  -webkit-transition: all 350ms ease-in;
+  transition: all 350ms ease-in;
+  overflow-y: hidden;
 }
 
 .c-menu__link::before {
   background: var(--primary-default);
-  border-radius: 4px;
   bottom: 0;
   content: "";
   display: block;
-  height: 2px;
-  left: 0;
-  opacity: 0;
+  height: 0.125rem;
+  left: -100%;
   position: absolute;
+  -webkit-transition: all 350ms ease-in;
+  transition: all 350ms ease-in;
   width: 100%;
 }
 
 .c-menu__link:hover {
-  color: var(--gray-00);
+  color: #fff;
 }
 
 .c-menu__link:hover::before {
-  opacity: 1;
+  left: 0;
+}
+
+.c-menu.typ-body {
+  margin: 0;
 }
 
 .c-divider {
@@ -226,11 +256,10 @@ a {
       -ms-flex-align: center;
           align-items: center;
   border-radius: 4px;
-  color: currentColor;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 30px;
+  gap: 32px;
   padding: 15px 30px;
   text-decoration: none;
   position: relative;
@@ -243,11 +272,11 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 30px;
+  gap: var(--size-lg);
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin: 90px 0;
+  margin: calc(var(--size-xl) * 2) auto 0 auto;
 }
 
 .skill {
@@ -257,15 +286,17 @@ a {
       -ms-flex-direction: column;
           flex-direction: column;
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 370px;
-          flex: 0 1 370px;
-  gap: 15px;
+      -ms-flex: 0 0 320px;
+          flex: 0 0 320px;
 }
 
 .skill__icon {
   color: var(--primary-default);
-  display: block;
-  font-size: 32px;
+  font-size: var(--size-lg);
+}
+
+.skill p {
+  margin-top: var(--size-md);
 }
 
 .c-cta {
@@ -278,42 +309,41 @@ a {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
-  margin-top: 30px;
-  gap: 30px;
+  gap: 32px;
 }
 
 .c-card {
   background-color: var(--dark-00);
+  border: 3px solid var(--dark-02);
   border-radius: 4px;
-  width: 300px;
+  max-width: 300px;
   position: relative;
+  -webkit-transition: border 480ms ease-in-out, -webkit-transform 480ms ease-in-out;
+  transition: border 480ms ease-in-out, -webkit-transform 480ms ease-in-out;
+  transition: transform 480ms ease-in-out, border 480ms ease-in-out;
+  transition: transform 480ms ease-in-out, border 480ms ease-in-out, -webkit-transform 480ms ease-in-out;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
-.c-card::after {
-  background: var(--dark-02);
-  border-radius: inherit;
-  content: "";
-  display: block;
-  height: 102%;
-  left: 50%;
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 102%;
-  z-index: -2;
+.c-card:hover {
+  -webkit-transform: translateY(-10px);
+          transform: translateY(-10px);
+  border-image-slice: 1;
 }
 
 .c-card__img {
   display: block;
-  height: 125px;
+  height: calc(var(--size-xl) * 2);
   -o-object-fit: cover;
      object-fit: cover;
-  width: 100%;
   -webkit-transition: -webkit-transform 350ms;
   transition: -webkit-transform 350ms;
   transition: transform 350ms;
   transition: transform 350ms, -webkit-transform 350ms;
+  width: 100%;
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
 }
 
 .c-card__img:hover {
@@ -322,17 +352,11 @@ a {
 }
 
 .c-card__content {
-  position: inherit;
-  padding: 27px;
+  padding: var(--size-md);
 }
 
-.l-hero {
-  margin-top: 30px;
-}
-
-.l-hero .typ-title {
-  word-break: break-word;
-  margin: 30px 0;
+.l-hero > :first-child {
+  margin-bottom: var(--size-md);
 }
 
 .l-hero .typ-subtitle::after {
