--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -39,6 +39,8 @@
 @import "./components/skills-list";
 @import "./components/c-cta";
 @import "./components/c-card";
+@import "./components/c-service-list";
+@import "./components/c-list";
 
 
 @import "./layout/l-layout-glob.scss";
